--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-router": "^5.1.11",
     "@types/react-router-dom": "^5.1.7",
     "d3-dsv": "^3.0.1",
+    "file-saver": "^2.0.5",
     "ionicons": "^5.4.0",
     "pyodide": "^0.19.0",
     "react": "^18.1.0",
